# rknn-cpp-yolo

./: CMakeLists.txt  CMakePresets.json  README.md  install_rknpu.sh  report.md  rknn.cpp
include/: common.h  rga_utils.h  rknn.h  rknn_model.h
src/: common.cpp  rga_utils.cpp  rknn_model.cpp
